--- a/blood_pressure.service
+++ b/blood_pressure.service
@@ -4,7 +4,7 @@ After=multi-user.target
 
 [Service]
 Type=simple
-ExecStart=sudo -u pi /usr/bin/python3 "/home/pi/Documents/Python Projects/blood_pressure/main.py"
+ExecStart=/usr/bin/python3 "/home/pi/Documents/Python Projects/blood_pressure/main.py"
 Restart=on-abort
 User=root
 
